--- a/test2.html
+++ b/test2.html
@@ -1,28 +1,57 @@
-To **auto-generate a Table of Contents (TOC)** for an AEM page by reading **Accordion Items** dynamically using a query, you can leverage the **JCR query mechanism** (using Sling models or Sightly Use-API) combined with **HTL** to render the TOC. Here’s a breakdown of ideas and implementation strategies:
+To ensure that the **Table of Contents (TOC)** is **automatically added** inside the Accordion component **above all Accordion Items**, as shown in the image, we need to slightly update the previous implementation.
+
+Here’s the updated solution:
 
 ---
 
-## **1. Using Query to Retrieve Accordion Items**
+## **Updated Implementation Overview**
+1. Modify the **Accordion Parent Component** to dynamically include the TOC.
+2. Ensure the TOC is rendered **above all Accordion Items** inside the Accordion container.
+3. The logic will dynamically identify all Accordion Items added to the page using a query.
 
-You can use the **`QueryBuilder`** API or **JCR SQL2** query to find child nodes representing Accordion Items under the Accordion parent node.
+---
 
-### **JCR SQL2 Query Example**
-Assuming the Accordion Items have a resource type `yourproject/components/accordionitem`, the query could look like this:
-```sql
-SELECT * FROM [nt:unstructured] AS item
-WHERE ISDESCENDANTNODE(item, '/content/mysite/page/jcr:content') 
-AND item.[sling:resourceType] = 'yourproject/components/accordionitem'
+### **1. HTL - Updated Accordion Component**
+
+In the **Accordion Parent Component**, render the Table of Contents before rendering the Accordion Items.
+
+**`accordion.html`**:
+```html
+<!-- Use Sling Model for TOC -->
+<sly data-sly-use.model="com.yourproject.models.AccordionTOCModel"/>
+
+<!-- Accordion Wrapper -->
+<div class="accordion">
+
+    <!-- Table of Contents Above Accordion Items -->
+    <div id="table-of-contents" class="table-of-contents">
+        <h2>Table of Contents</h2>
+        <ul>
+            <sly data-sly-list.item="${model.tocItems}">
+                <li>
+                    <a href="#${item['title'].split(',')[1]}">
+                        ${item['title'].split(',')[0]}
+                    </a>
+                </li>
+            </sly>
+        </ul>
+    </div>
+
+    <!-- Render Accordion Items -->
+    <sly data-sly-list.item="${resource.getChildren}">
+        <sly data-sly-resource="${item.path @ resourceType='yourproject/components/accordionitem'}"></sly>
+    </sly>
+</div>
+
+<!-- Include JavaScript -->
+<script src="/etc.clientlibs/yourproject/components/accordion/clientlibs/site.min.js"></script>
 ```
 
 ---
 
-## **2. Implementation with a Sling Model**
+### **2. Java Logic - Sling Model for Dynamic TOC**
 
-A Sling Model can execute the query and pass the data to the HTL template for rendering.
-
-### **Sling Model Code**
-
-Create a Sling Model to fetch all Accordion Items under a specific parent node:
+The **Sling Model** remains similar but dynamically identifies all Accordion Items within the Accordion.
 
 **`AccordionTOCModel.java`**:
 ```java
@@ -31,7 +60,6 @@ package com.yourproject.models;
 import com.adobe.cq.sightly.WCMUsePojo;
 import org.apache.sling.api.resource.Resource;
 import org.apache.sling.api.resource.ResourceResolver;
-import org.apache.sling.api.wrappers.ValueMapDecorator;
 
 import javax.jcr.Node;
 import javax.jcr.RepositoryException;
@@ -51,20 +79,19 @@ public class AccordionTOCModel extends WCMUsePojo {
         ResourceResolver resolver = getResourceResolver();
         Session session = resolver.adaptTo(Session.class);
 
-        String currentPagePath = getCurrentPage().getPath();
+        String currentPath = getResource().getPath();
         String queryStatement = "SELECT * FROM [nt:unstructured] AS item "
-                + "WHERE ISDESCENDANTNODE(item, '" + currentPagePath + "') "
+                + "WHERE ISCHILDNODE(item, '" + currentPath + "') "
                 + "AND item.[sling:resourceType] = 'yourproject/components/accordionitem'";
 
         QueryManager queryManager = session.getWorkspace().getQueryManager();
         Query query = queryManager.createQuery(queryStatement, Query.JCR_SQL2);
         QueryResult result = query.execute();
 
-        // Parse results
         for (Row row : result.getRows()) {
             Node node = row.getNode();
             String title = node.hasProperty("title") ? node.getProperty("title").getString() : "Untitled";
-            String id = node.getPath().replace("/", "_"); // Generate unique ID
+            String id = title.toLowerCase().replace(" ", "-");
             tocItems.add(Collections.singletonMap("title", title + "," + id));
         }
     }
@@ -77,76 +104,108 @@ public class AccordionTOCModel extends WCMUsePojo {
 
 ---
 
-## **3. HTL Integration**
+### **3. HTL for Accordion Item IDs**
 
-Use the **AccordionTOCModel** in your **Accordion HTL** to render the dynamic Table of Contents.
+Ensure each Accordion Item has a unique ID based on its title.
 
-**`accordion.html`**:
+**`accordionitem.html`**:
 ```html
-<!-- Use Sling Model -->
-<sly data-sly-use.model="com.yourproject.models.AccordionTOCModel"/>
-
-<!-- Table of Contents -->
-<div id="table-of-contents" class="table-of-contents">
-    <h2>Table of Contents</h2>
-    <ul>
-        <sly data-sly-list.item="${model.tocItems}">
-            <li>
-                <a href="#${item['title'].split(',')[1]}">
-                    ${item['title'].split(',')[0]}
-                </a>
-            </li>
-        </sly>
-    </ul>
-</div>
-
-<!-- Accordion Sections -->
-<div class="accordion">
-    <sly data-sly-list.item="${resource.getChildren}">
-        <div class="accordion-item" id="${item.name}">
-            <h3 class="accordion-title">${item.title}</h3>
-            <div class="accordion-content">
-                <sly data-sly-include="body.html"></sly>
-            </div>
-        </div>
-    </sly>
+<div class="accordion-item" id="${properties.title @ context='attribute'}">
+    <h3 class="accordion-title">${properties.title}</h3>
+    <div class="accordion-content">
+        <sly data-sly-include="body.html"></sly>
+    </div>
 </div>
 ```
 
 ---
 
-## **4. Explanation of the Solution**
+### **4. JavaScript for Smooth Scrolling**
 
-1. **JCR Query**:
-   - Retrieves all nodes of type `nt:unstructured` under the page content path.
-   - Filters nodes with `sling:resourceType` equal to `yourproject/components/accordionitem`.
+Add JavaScript to enable smooth scrolling when a TOC link is clicked.
+
+**`toc-generator.js`**:
+```javascript
+document.addEventListener("DOMContentLoaded", function () {
+    document.querySelectorAll("#table-of-contents a").forEach(link => {
+        link.addEventListener("click", function (e) {
+            e.preventDefault();
+            const target = document.querySelector(link.getAttribute("href"));
+            if (target) {
+                target.scrollIntoView({ behavior: "smooth", block: "start" });
+            }
+        });
+    });
+});
+```
+
+---
+
+### **5. CSS Styling for TOC**
+
+Add styling for the Table of Contents for better appearance.
+
+**`style.css`**:
+```css
+.table-of-contents {
+    margin-bottom: 20px;
+    padding: 10px;
+    background: #f8f9fa;
+    border: 1px solid #ddd;
+}
+
+.table-of-contents h2 {
+    margin: 0 0 10px;
+    font-size: 18px;
+}
+
+.table-of-contents ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.table-of-contents li {
+    margin: 5px 0;
+}
+
+.table-of-contents a {
+    color: #0056b3;
+    text-decoration: none;
+}
+
+.table-of-contents a:hover {
+    text-decoration: underline;
+}
+```
+
+---
+
+### **How It Works**
+
+1. **Accordion Parent Component**:
+   - The TOC is added at the top of the Accordion container.
+   - It dynamically lists all Accordion Items (using the Sling Model query).
 
 2. **Sling Model**:
-   - Executes the JCR SQL2 query and processes the results.
-   - Extracts the `title` and generates unique IDs based on the node path.
-   - Provides a list of TOC items as `Map` objects with `title` and `id`.
+   - Queries all child nodes with `sling:resourceType` as `accordionitem`.
+   - Extracts the titles of Accordion Items and assigns unique IDs.
 
-3. **HTL Rendering**:
-   - Uses the `AccordionTOCModel` to iterate over the TOC items.
-   - Outputs links that point to corresponding Accordion sections via `id`.
+3. **Accordion Items**:
+   - Each item has an `id` based on its title, allowing the TOC links to scroll to their respective sections.
 
-4. **Accordion Section IDs**:
-   - IDs for each Accordion Item are derived from the node path to ensure uniqueness.
+4. **JavaScript**:
+   - Enables smooth scrolling for TOC links.
 
----
-
-## **5. Advantages of This Approach**
-
-1. **Dynamic Querying**: The TOC automatically updates as Accordion Items are added or removed.
-2. **Scalable**: Supports pages with multiple Accordion Items.
-3. **Separation of Concerns**: Business logic is encapsulated in the Sling Model, and HTL only handles rendering.
+5. **Styling**:
+   - Ensures the TOC appears clean and visually distinct.
 
 ---
 
-## **6. Next Steps**
+### **Final Output**
 
-1. Enhance error handling in the Sling Model for edge cases.
-2. Add smooth scroll behavior in JavaScript for better navigation.
-3. Optimize query performance by restricting depth or limiting results.
+When the Accordion component is added to any page:
+- A **Table of Contents** is automatically rendered at the top of the Accordion, listing all Accordion Item titles.
+- Clicking on a TOC entry scrolls smoothly to the corresponding Accordion Item section.
 
-Let me know if you need further assistance refining this solution! 🚀
+This solution is clean, dynamic, and works seamlessly for any Accordion added to a page. Let me know if you need further refinements! 🚀
